create frontend components and cleanup landing page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,10 @@
 .App {
+  color: black;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 5px;
 }
 
 .App-logo {
@@ -13,26 +18,39 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.Container {
+  background-color: whitesmoke;
+  display: flex;
+  height: 90vh;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: stretch;
+}
+
+.Container div{
+  width: 100%;
+  display: flex;
+}
+
+.Container .left {
+  height: 100%;
+  flex-shrink: 1;
+}
+.Container .right {
+  height: 100%;
+  flex-shrink: 2;
+  border-left: #27282b;
+  border-left-style: inset;
+}
+
+.Header {
+  overflow: hidden;
+  background-color: #4f5052;
+  height: 7vh;
+  margin-bottom: 5px;
 }
